--- a/templates/home.html
+++ b/templates/home.html
@@ -2,49 +2,37 @@
 <html>
   <head>
     <title>career-website</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      h1{
-      font-size:40px;
-      font-family:Roboto;
-      font-weight:normal;
-        color: rgb(50, 50, 50);
-        text-align: center;;
+      #banner{
+        width:100%;
+        height:360px;
       }
-    #banner{
-      width:100%;
-      height:360px;
-      /* object-fit:cover; */
-    }
-      h2{
-        font-family: Roboto;
-        font-size:32px;
-        color: rgb(100, 100, 100);
-        text-align:center;
-        font: weight normal;;   
-      }
-    .body{
-        font-family:Roboto;
-        color: rgb(80, 80, 80);
-      }
-    #container{
-      max-width:720px;
-      margin:0 auto;
-    }
     </style>
     </head>
     <body>
-      <div id='container'>
-      <h1>Impex Career</h1>
-    <img id ="banner"src='https://career-website.betselottadele3.repl.co/static/bannerr.jpeg' width='320'>
-    <h2>About Impex</h2>
-    <p class ='body'>
+      <div class='container'>
+      <h1 class ='text-center mt-2 mb-4'>Impex Career</h1>
+    <img class ='img-fluid'id ="banner"src='https://career-website.betselottadele3.repl.co/static/bannerr.jpeg' width='320'>
+    <h2 class ='text-center mt-2 mb-4'>About Impex</h2>
+    <p class ='lead'>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget mauris pharetra et ultrices neque. Sit amet risus nullam eget. At tellus at urna condimentum mattis pellentesque id nibh tortor. Cursus risus at ultrices mi tempus imperdiet nulla. Consequat semper viverra nam libero justo. Adipiscing vitae proin sagittis nisl. Amet commodo nulla facilisi nullam vehicula. Nunc sed augue lacus viverra vitae congue. Praesent tristique magna sit amet purus gravida. Urna molestie at elementum eu. Pellentesque habitant morbi tristique senectus et netus. Quis vel eros donec ac odio tempor orci dapibus. Ipsum a arcu cursus vitae. Enim sed faucibus turpis in eu mi bibendum neque egestas.
     </p>
-    <h2>Open Positions</h2>
-    <p class ='body'>Todo Show the jobs here</p>
-        <div style='text-align:center;'>
-      <button>Contact us</button>
-    <p>Copyright 2023, Impex</p>
+    <h2 class ='text-center'>Open Positions</h2>
+    <div>
+      {% for job in jobs %}
+         {%include 'jobitem.html' %}
+
+      {% endfor %}
+    
+    
+    
+    </div>
+        <div class ='text-center'>
+      <button class ='btn btn-primary btn-lg'>Contact us</button>
+    <p class ='mt-4'>Copyright 2023, Impex</p>
     
         </div>
     </body>
